# space-ships

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
include/: AudioMenu.hpp  ConnectToGameBranch.hpp  Font.hpp  Gameplay.hpp  Helpers.hpp  HostGameBranch.hpp  KeyIcon.hpp  MainMenu.hpp  ServerTestBranch.hpp  SoundDisperseEntity.hpp  decl.hpp  dynamic_unique_cast.hpp
include/components/: AbstractManager.hpp  AnimatedSprite.hpp  Background.hpp  ControlsScheme.hpp  Effect.hpp  EffectManager.hpp  EncryptionBase.hpp  FileLoader.hpp  GameConfiguration.hpp  GameInfoData.hpp  Jsonable.hpp  LocalDriveSession.hpp  Session.hpp  SoundManager.hpp  TargetCamera.hpp  soft_parameter.hpp
include/coop/: BasicRouterResponse.hpp  ChatSocket.hpp  ClientSocket.hpp  Request.hpp  Router.hpp  Router.inl  TcpRouter.hpp  TransferDataConverter.hpp  TransferInstance.hpp  TransferObject.hpp  Transferable.hpp  TransferableAction.hpp  TransferableActionFabric.hpp  TransferableFabric.hpp  TransferableObject.hpp  UdpRouter.hpp  UdpSocket.hpp
include/exceptions/: exceptions.hpp
include/game/: AbstractAsteroid.hpp  AbstractBullet.hpp  AbstractShip.hpp  AbstractWeapon.hpp  Bullet.hpp  BulletMother.hpp  Camera2d.hpp  Collidable.hpp  Collider.hpp  ConnectedPlayerShip.hpp  DamageDealer.hpp  EnemyShip.hpp  FirearmBullet.hpp  FirearmWeapon.hpp  GameGlobals.hpp  GameManager.hpp  GameObject.hpp  GameObjectBase.hpp  GameObjectFabric.hpp  GameObjectFactory.hpp  GameObjectTranslator.hpp  GameSession.hpp  Gun.hpp  Hittable.hpp  (+8 more)
src/: AudioMenu.cpp  ConnectToGameBranch.cpp  Font.cpp  Gameplay.cpp  Helpers.cpp  HostGameBranch.cpp  KeyIcon.cpp  MainMenu.cpp  ServerTestBranch.cpp  SoundDisperseEntity.cpp  main.cpp
test/: CMakeLists.txt
(+140 files in other folders)
